--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @layer base {
-  body::-webkit-scrollbar {
-    width: 0.5rem;
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
   }
 
-  body::-webkit-scrollbar-track {
-    background-color: #f0f0f042;
+  ::-webkit-scrollbar-thumb {
+    background: #191919;
   }
 
-  body::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    background: #f8c9c9;
+  ::-webkit-scrollbar-track {
+    background: #f5f5f5;
   }
+}
+
+.box-shadows {
+  box-shadow: 4px 4px 20px 0px #0000003d;
+}
+
+.name {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price {
+  flex: 1;
+  text-align: right;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
